syntax = "proto3";

package flow;

option go_package = "github.com/vorteil/direktiv/pkg/flow";

message ReportActionResultsRequest {
	optional string instanceId = 1;
	optional int32 step = 2;
	optional string actionId = 3;
	optional string errorCode = 4;
	optional string errorMessage = 5;
	optional bytes output = 6;
}
